--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,3 +40,9 @@
 .read-the-docs {
   color: #888;
 }
+
+body {
+  background-image: url('https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg');
+  background-size: cover;
+  background-position: center;
+}
