--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -73,3 +73,19 @@ body {
 display: inline-block;
 padding: 10px;
 }
+
+.Description{
+  text-align: left;
+}
+
+.leftbox {
+  float: left;
+ 
+  width: 25%;
+  height: 280px;
+}
+.middlebox {
+  float: left;
+  width: 75%;
+  height: 280px;
+}
