--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -89,6 +89,11 @@ padding: 10px;
   width: 75%;
   height: 280px;
 }
+.rightbox {
+  float:right;
+  width: 25%;
+  height: 280px;
+}
 .problem{
   margin-left: 30%;
 }
